[gd_scene load_steps=11 format=3 uid="uid://br3cf3r7aqiv2"]

[ext_resource type="Script" path="res://scripts/gameplay_control.gd" id="1_eeqqq"]
[ext_resource type="ButtonGroup" uid="uid://vfo6h4ik2kac" path="res://scenes/gameplay-controls-button-group.tres" id="1_whlfy"]
[ext_resource type="Texture2D" uid="uid://cnm0ej7l76rj5" path="res://assets/ui/btn-place-road.png" id="2_hcgak"]
[ext_resource type="Texture2D" uid="uid://ba3oicu5nlqfg" path="res://assets/ui/btn-bg.png" id="3_wpgl5"]
[ext_resource type="Texture2D" uid="uid://bntb5jedmtcl0" path="res://assets/ui/btn-remove-road.png" id="5_l7vcs"]

[sub_resource type="Animation" id="Animation_tp5yd"]
resource_name = "idle"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BG:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("icon:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_lqkvp"]
resource_name = "hover"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BG:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 1.2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("icon:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.4, 1.4)]
}

[sub_resource type="Animation" id="Animation_omolh"]
resource_name = "unhover"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BG:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1.2, 1.2), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("icon:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1.4, 1.4), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_vkpcd"]
resource_name = "selected"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BG:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1.2, 1.2), Vector2(1, 1), Vector2(1.2, 1.2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("icon:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1.4, 1.4), Vector2(1.2, 1.2), Vector2(1.4, 1.4)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o8ymp"]
_data = {
"hover": SubResource("Animation_lqkvp"),
"idle": SubResource("Animation_tp5yd"),
"selected": SubResource("Animation_vkpcd"),
"unhover": SubResource("Animation_omolh")
}

[node name="GameplayControl" type="CanvasLayer"]
script = ExtResource("1_eeqqq")

[node name="btn-place-road" type="TextureButton" parent="."]
modulate = Color(0.74902, 1, 1, 1)
self_modulate = Color(1, 1, 1, 0)
offset_left = 812.0
offset_top = 938.0
offset_right = 890.0
offset_bottom = 1016.0
mouse_default_cursor_shape = 2
toggle_mode = true
button_group = ExtResource("1_whlfy")
texture_normal = ExtResource("2_hcgak")

[node name="icon" type="Sprite2D" parent="btn-place-road"]
z_index = 10
position = Vector2(39, 39)
texture = ExtResource("2_hcgak")

[node name="BG" type="Sprite2D" parent="btn-place-road"]
z_index = 9
position = Vector2(39, 39)
texture = ExtResource("3_wpgl5")

[node name="AnimationPlayer" type="AnimationPlayer" parent="btn-place-road"]
libraries = {
"": SubResource("AnimationLibrary_o8ymp")
}

[node name="btn-remove-road" type="TextureButton" parent="."]
self_modulate = Color(1, 1, 1, 0)
offset_left = 1043.0
offset_top = 935.0
offset_right = 1116.0
offset_bottom = 1022.0
toggle_mode = true
button_group = ExtResource("1_whlfy")
texture_normal = ExtResource("5_l7vcs")

[node name="icon" type="Sprite2D" parent="btn-remove-road"]
z_index = 10
position = Vector2(39, 39)
texture = ExtResource("5_l7vcs")

[node name="BG" type="Sprite2D" parent="btn-remove-road"]
z_index = 9
position = Vector2(39, 39)
texture = ExtResource("3_wpgl5")

[node name="AnimationPlayer" type="AnimationPlayer" parent="btn-remove-road"]
libraries = {
"": SubResource("AnimationLibrary_o8ymp")
}

[connection signal="mouse_entered" from="btn-place-road" to="." method="_on_btnplaceroad_mouse_entered"]
[connection signal="mouse_exited" from="btn-place-road" to="." method="_on_btnplaceroad_mouse_exited"]
[connection signal="toggled" from="btn-place-road" to="." method="_on_btnplaceroad_toggled"]
[connection signal="mouse_entered" from="btn-remove-road" to="." method="_on_btnremoveroad_mouse_entered"]
[connection signal="mouse_exited" from="btn-remove-road" to="." method="_on_btnremoveroad_mouse_exited"]
[connection signal="toggled" from="btn-remove-road" to="." method="_on_btnremoveroad_toggled"]
